<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.LoginActivity"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <View
        android:layout_width="match_parent"
        android:layout_height="60dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/icon"/>
        <View
            android:layout_width="10dp"
            android:layout_height="30dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/laladache"
            android:textColor="#cded12"
            android:textSize="30sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <EditText
        android:id="@+id/et_phone"
        android:layout_width="310dp"
        android:layout_height="40dp"
        style="@style/Custom_EditText"
        android:hint="@string/phone_number"
        android:textColorHint="#c2aeae"
        android:inputType="phone"
        android:layout_gravity="center_horizontal"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center">
        <EditText
            android:id="@+id/et_code"
            android:layout_width="110dp"
            android:layout_height="40dp"
            style="@style/Custom_EditText"
            android:layout_marginRight="20dp"
            android:hint="@string/security_code"
            android:textColorHint="#c2aeae"
            android:maxLength="4"
            android:inputType="number"/>
        <Button
            android:id="@+id/btn_get_code"
            android:layout_width="180dp"
            android:layout_height="40dp"
            style="@style/Custom_Button"
            android:text="@string/get_security_code"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="40dp"
        style="@style/Custom_Button"
        android:text="@string/login"/>
</LinearLayout>
