<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.baidu.mapapi.map.MapView
        android:id="@+id/bmapView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top"
        android:alpha="0.7">
        <TextView
            android:id="@+id/tv_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"/>
        <EditText
            android:id="@+id/et_start"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            style="@style/Custom_EditText"
            android:hint="@string/start_port"
            android:textColorHint="#786464"
            android:textColor="#000000"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <EditText
            android:id="@+id/et_end"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            style="@style/Custom_EditText"
            android:hint="@string/end_port"
            android:textColorHint="#786464"
            android:textColor="#000000"/>
        <TextView
            android:id="@+id/tv_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#000000"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"/>
            <Button
                android:id="@+id/btn_search"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                style="@style/Custom_Button"
                android:text="@string/search_route"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"/>
            <Button
                android:id="@+id/btn_order"
                android:layout_width="0dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                style="@style/Custom_Button"
                android:text="@string/order"/>
            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.2"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>